--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "monolog/monolog": "1.*",
         "phpmailer/phpmailer": "5.*",
         "intervention/image": "2.*",
+        "intervention/imagecache": "*",
         "robmorgan/phinx": "0.5.*"
     },
     "autoload": {
