--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.4.0",
         "monolog/monolog": "1.*",
-        "phpmailer/phpmailer": "5.*",
+        "swiftmailer/swiftmailer": "5.*",
         "intervention/image": "2.*",
         "robmorgan/phinx": "0.5.*",
         "guzzlehttp/psr7": "dev-master"
